deploy/kube/gitops/svc-pod-virtual-0.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-virtual-0
  namespace: $INSOLAR_NAMESPACE
spec:
  ports:
  - name: api
    port: 19101
    protocol: TCP
    targetPort: 19101
  - name: admin-api
    port: 19001
    protocol: TCP
    targetPort: 19001
  - name: testwallet-api
    port: 32301
    protocol: TCP
    targetPort: 32301
  - name: metrics
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    statefulset.kubernetes.io/pod-name: virtual-0
  sessionAffinity: None
  type: LoadBalancer
